# CS-shooting-game

./: .gitignore  CMakeLists.txt  CS.pro  README.md  loginpage.cpp  loginpage.ui  monster.cpp  monster.h  res.qrc
src/: CMakeLists.txt  CS-shooting  game.vcxproj  building.h  bullet.h  game.cpp  monster.cpp  monster.h  player.cpp  player.h  shop.h  vector.h  weapon.h
